src/test/deca/context/invalid/created/testCast/castTypeDyna.deca
// Description :
//    Test invalide : Tentative de conversion entre deux classes non liées par une relation d'héritage.
//
// Résultats :
//    Erreur contextuelle
//    Ligne 13: TypeCastException: Cannot convert UneClasse to DeuxClasses (casting failed).

class UneClasse {}
class DeuxClasses  {}

{
    UneClasse v = new UneClasse(); 
    DeuxClasses result = (DeuxClasses) (v);
}